# micro-swagger

./: .gitignore  README.md  go.mod
protoc-gen-micro-swagger/: README.md  go.mod  go.sum  main.go  main_test.go
protoc-gen-micro-swagger/example/: example.proto  example.swagger.json
protoc-gen-micro-swagger/internal/casing/: LICENSE.md
protoc-gen-micro-swagger/internal/codegenerator/: BUILD.bazel  parse_req_test.go
protoc-gen-micro-swagger/internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  grpc_api_configuration_test.go  openapi_configuration.go  openapi_configuration_test.go  registry.go  registry_test.go  services.go  services_test.go  types.go
protoc-gen-micro-swagger/internal/descriptor/apiconfig/: BUILD.bazel  apiconfig.proto
protoc-gen-micro-swagger/internal/descriptor/openapiconfig/: BUILD.bazel  openapiconfig.pb.go  openapiconfig.proto
protoc-gen-micro-swagger/internal/generator/: BUILD.bazel  generator.go
protoc-gen-micro-swagger/internal/genopenapi/: BUILD.bazel  generator.go  template.go  templateNew.go  template_test.go  types.go
protoc-gen-micro-swagger/internal/httprule/: compile.go
protoc-gen-micro-swagger/options/: annotations.pb.go  annotations.proto  microOption.pb.go  microOption.proto  openapiv2.pb.go  openapiv2.proto
web/: README.md  go.mod  go.sum  main.go
web/handler/: doc.go  doc_test.go  type.go
web/router/: rouer.go
