load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["generator.go"],
    importpath = "github.com/BlackCodes/micro-swagger/protoc-gen-micro-swagger/internal/generator",
    deps = ["//internal/descriptor:go_default_library"],
)
